Print styles: fix cutoff inputs

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -880,7 +880,7 @@ footer {
       border: solid 2px #000;
       height: 77%;
       display: flex;
-      max-width: 2.5rem;
+      max-width: 3.5rem;
     }
   }
 
